:octocat: readme formatting

--- a/note.html
+++ b/note.html
@@ -1,1 +1,2 @@
 <p><strong>Note:</strong> Road crash data from <a href="https://data.sa.gov.au/data/dataset/road-crashes-in-sa" target="_blank">https://data.sa.gov.au/data/dataset/road-crashes-in-sa</a>; Subuurbs bounding box extracted from <a href="https://data.sa.gov.au/data/dataset/suburb-boundaries" target="_blank">https://data.sa.gov.au/data/dataset/suburb-boundaries</a>.</p>
+<p><small>GitHub: <a href="https://github.com/asheshwor/crashsa" target="_blank">https://github.com/asheshwor/crashsa</a></small></p>
